
Version 0.4.2   - ???
  * Added the ability to archive messages older than a given absolute date 
    with the new option '--date'.
  * Fixed a bug where archivemail would complain about messages older than 
    1970. Yes, someone had a 'Date' header with 1967 :)
  * Complain if the mailbox to be read does not look like a valid mbox-format
    mailbox.

Version 0.4.1   - 21 April 2002
  * Don't archive messages that are flagged important unless we are given the
    --include-flagged option. 
  * Fixed a bug where when archiving messages from maildir mailboxes, we were
    not preserving the status information contained in the filename suffix to
    Status and X-Status mbox headers. This means we forgot if we had read or 
    replied to the message.
  * We now complain if an mbox-format mailbox that is being read changes in 
    size -- this should not happen, since we have locked these files, but it
    is a good sanity check.
  * Changed from using the mailbox.PortableUnixMailbox class to read mbox 
    mailboxes to the mailbox.UnixMailbox class. This fixes bugs where unquoted
    'From ' lines in the body of messages were confusing archivemail.

Version 0.4.0   - 17 April 2002
  * Added an option --no-compress to make archives but not compress them with  
    gzip.
  * Added an option --preserve-unread to not archive unread messages.
  * Added a few more unittests.

Version 0.3.2   - 13 April 2002
  * Added a lot more information to the manpage, including examples and 
    notes.
  * Fixed up the README file and archivemail usage message.
  * Added an example archivemail shell script that I run from crontab.

Version 0.3.1   - 12 April 2002
  * Stopped calling 'gzip' externally and started using the gzip library
    so that we can append to a copy of the gzip archive directly. 
  * Removed 'bzip2' and 'compress' options since they are increasing
    complexity without adding much, and needed to be called externally.